Refactor: 세션 바인딩과 수동 분기를 표준 API로 정리