@@ -24,6 +24,6 @@ public final class SearchParams {
     }
 
     public static int clampSize(int size, int maxSize) {
-        return Math.min(Math.max(size, 1), maxSize);
+        return Math.clamp(size, 1, maxSize);
     }
 }
